...
                    </view>
                    <navigationItem key="navigationItem" id="uAa-Vx-Z6h">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="heart.fill" catalog="system" id="UIq-ja-dh1">
                            <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                            <connections>
...
                                                </constraints>
                                            </imageView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Anz-6E-4VN">
                                                <rect key="frame" x="20" y="384.5" width="374" height="19"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
...
                                                <rect key="frame" x="16" y="512.5" width="382" height="20"/>
                                                <attributedString key="attributedText">
                                                    <fragment content="About">
                                                        <attributes>
                                                            <font key="NSFont" size="17" name="SFProRounded-Light"/>
...
                                                <rect key="frame" x="20" y="351" width="374" height="25.5"/>
                                                <attributedString key="attributedText">
                                                    <fragment content="Name">
                                                        <attributes>
                                                            <font key="NSFont" size="22" name="Cochin"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bca-eI-hxp">
                                                <rect key="frame" x="20" y="460" width="374" height="30"/>
                                                <state key="normal" title="Save"/>
                                                <connections>
                                                    <action selector="save:" destination="vOa-jK-CHH" eventType="touchUpInside" id="Ytc-bD-O6u"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4JZ-sS-tul" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Profile" image="person" catalog="system" id="cPa-gy-q4n"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="QRz-pn-gUV">
...
