...
        newReleaseView?.isHidden = true
        navBarTint = navigationController?.navigationBar.tintColor
    }

    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        navigationItem.title = "Game Catalogue"
        navigationController?.navigationBar.tintColor = navBarTint
    }

    override func viewWillDisappear(_ animated: Bool) {
        super.viewWillDisappear(animated)
        navigationItem.title = ""
...
